# XCodeReviewer

./: .coverage  .dockerignore  .env.example  .gitignore  .vercelignore  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  ENV_CONFIG.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PostgreSQL配置完成.md  README.md  README_CN.md  README_EN.md  README_UPDATE_SUMMARY.md  README_V2_UPDATE.md  README_V2_UPDATE_EN.md  SECURITY.md  SYSTEM_CONFIG_TO_DATABASE_SUMMARY.md  SYSTEM_SETTINGS_DATABASE_MIGRATION.md  check_imports.py  components.json  coverage.xml  docker-compose.prod.cn.yml  docker-compose.prod.yml  docker-compose.yml  example.txt  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  semgrep_results.json  tailwind.config.js  tsconfig.app.json  tsconfig.check.json  tsconfig.json  vercel.json  (+4 more)
backend/: .coverage  .dockerignore  .env.development  .env.example  .env.production  API_IMPLEMENTATION_SUMMARY.md  ASYNC_PROCESSING_COMPLETE.md  Architecture.md  CURRENT_STATUS.md  Dockerfile  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_SUMMARY.md  FIXED_AND_READY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PROGRESS.md  LOCAL_DEV_SIMPLE.md  PROGRESS_SUMMARY.md  PROJECT_STATUS.md  QUICK_START.md  README.md  README_UV.md  REPOSITORY_SCANNER_COMPLETE.md  START_DEV_SERVER.md  UV_MIGRATION.md  alembic.ini  coverage.xml  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.yml  docker-entrypoint.sh  docker-start.sh  env.example  main.py  pull-images.sh  pyproject.toml  pytest.ini  requirements-lock.txt  requirements.txt  start.sh  start_celery.sh  (+7 more)
backend/alembic/: env.py
backend/api/: dependencies.py
backend/app/: __init__.py  config.py  main.py  middleware.py
backend/core/: __init__.py  circuit_breaker.py  encryption.py  exceptions.py  file_validator.py  metrics.py  metrics_middleware.py  security.py  tracing.py
backend/db/: __init__.py  base.py  session.py
backend/docs/: API_DOCUMENTATION.md  AWS_BEDROCK_SETUP.md  BEDROCK_ENV_EXAMPLE.md  DEPLOYMENT.md  DEPLOYMENT_ROLLOUT.md  DEVELOPER_GUIDE.md  ENVIRONMENT_VARIABLES.md  LOAD_TESTING.md  (+14 more)
(+519 files in other folders)
