[project]
name = "deepaudit-backend"
version = "0.1.0"
description = "DeepAudit Backend API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]",
    "sqlalchemy>=2.0.0",
    "asyncpg",
    "alembic",
    "pydantic>=2.0.0",
    "pydantic-settings",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
    "python-multipart",
    "httpx",
    "email-validator",
    "greenlet",
    "bcrypt<5.0.0",
    "litellm>=1.0.0",
    "reportlab>=4.0.0",
    "weasyprint>=66.0",
    "jinja2>=3.1.6",
]
